--- a/Zini_Signed.plist
+++ b/Zini_Signed.plist
@@ -11,7 +11,7 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>https://freeboxapps.github.io/freebox.ws/ZiniTevi-61113adf17252.ipa</string>
+<string>https://zinitevi.github.io/movieapps/apps/zinitevi_adhoc.ipa</string>
 </dict>
 <dict>
 <key>kind</key>
